<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.taneja.ajay.gstbilling.NewBillActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/item_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_item_value"
                android:hint="@string/item_hint"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/final_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_final_price_value"
                android:hint="@string/final_price_hint"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_quantity_value"
                android:hint="@string/quantity_tv"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tax_slab_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/tax_slab_spinner"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="addToBill"
                android:id="@+id/add_to_bill_btn"
                android:layout_marginBottom="5dp"
                android:text="@string/add_to_bill_btn_label"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="finishAddingItems"
                android:id="@+id/finish_btn"
                android:layout_marginBottom="10dp"
                android:text="@string/finish_btn_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/done_edit_item_btn"
                android:layout_marginBottom="5dp"
                android:text="@string/done_edit_item_btn_label"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
