<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.taneja.ajay.gstbilling.DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/serial_number_label"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/price_label"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/qty_label"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/rate_label"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/taxable_value_label"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/tax_slab_tv"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/cgst_label"/>
        <TextView
            android:textColor="@color/colorPrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sgst_label"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <ScrollView
        android:id="@+id/detail_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_amount_before_tax_label"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/total_amount_before_tax_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_cgst_label"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/total_cgst_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_sgst_label"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/total_sgst_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_gst_label"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/total_gst_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/total_amount_label"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/total_amount_after_tax_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/total_amount_in_words_value"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
