<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bill_customer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.taneja.ajay.gstbilling.NewBillCustomerActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/customer_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/customer_name_value"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/phone_number_value"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:maxLength="10"
        android:hint="10-digit phone number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="addCustomer"
        android:text="@string/add_customer_next_label"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
